--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,4 +12,385 @@ html {
 
 body {
     font-size: 1.6rem;
+    font-family: "Sora", sans-serif;
+}
+
+/* Common */
+a {
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1170px;
+    width: calc(100% - 48px);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0 12px;
+    height: 60px;
+    min-width: 205px;
+    background: var(--primary-color);
+    border-color: transparent;
+    border-radius: 999px;
+    cursor: pointer;
+    color: #fff;
+    text-align: center;
+    font-size: 1.8rem;
+    line-height: 58px;
+}
+
+.btn:hover {
+    opacity: 0.9;
+}
+
+.title {
+    font-weight: 600;
+}
+
+.lv2 {
+    color: #10375c;
+    font-size: 5rem;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.desc {
+    color: #575f66;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.67;
+}
+
+/* ===========Header + Navigation=========== */
+.header {
+    position: sticky;
+    top: -25px;
+    z-index: 1;
+    padding: 30px 0 5px;
+    background: #10375c;
+}
+
+.header__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* logo */
+.header__top .logo {
+    display: inline-flex;
+    font-size: 1rem;
+}
+
+.logo__circle::after,
+.logo__circle::before {
+    display: inline-block;
+    content: "";
+    border-radius: 50%;
+}
+
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background: #2e80ce;
+}
+
+.logo__circle::after {
+    position: relative;
+    top: -0.3em;
+    left: -1.9em;
+    width: 1.6em;
+    height: 1.6em;
+    background: #fff;
+}
+
+.logo__text {
+    margin-left: -1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.logo__brand {
+    color: #fff;
+    text-align: right;
+    font-size: 1.8em;
+    line-height: 0.78;
+}
+
+.logo__brand:last-child {
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 300;
+    line-height: 1.17;
+}
+
+/* navbar */
+
+.navbar__list {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__link,
+.action__login {
+    padding: 4px 21px;
+    color: #c9d2da;
+    font-weight: 300;
+    line-height: 1.75;
+}
+
+.navbar__link:hover,
+.navbar__link--active {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: #fff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__link--active::before {
+    display: inline-block;
+    content: "";
+    border-radius: 50%;
+    width: 6px;
+    height: 6px;
+    background: #fff;
+}
+
+/* Header Action */
+.action__login {
+    margin-right: 8px;
+}
+
+.action__signin {
+    height: 44px;
+    line-height: 40px;
+    min-width: 104px;
+    font-size: 1.6rem;
+}
+
+/* =========== Hero =========== */
+.hero {
+    padding-top: 71px;
+    background: #10375c;
+    height: calc(100vh - 79px);
+}
+
+.hero .container {
+    display: flex;
+}
+
+/* Hero Content */
+.hero__content {
+    margin: auto 0;
+    flex-shrink: 0;
+    width: 44.2%;
+}
+
+.hero__title {
+    color: #fff;
+    font-size: 7rem;
+    line-height: 1.14;
+    letter-spacing: -1.4px;
+}
+
+.hero__desc {
+    margin-top: 22px;
+    color: #c9d2da;
+}
+
+.hero__row {
+    margin-top: 38px;
+}
+
+.hero__phone {
+    margin-left: 38px;
+    color: #fff;
+    font-size: 1.8rem;
+    line-height: 1.67;
+}
+
+/* Hero Media */
+.hero__media {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
+.hero__img {
+    max-width: 330px;
+    width: 100%;
+    height: 540px;
+    border-radius: 6px;
+}
+
+.hero__img:first-child {
+    position: relative;
+    margin-right: -6px;
+}
+
+.hero__img:last-child {
+    max-width: 210px;
+    width: 100%;
+    height: 410px;
+}
+
+/* =========== Services =========== */
+.services {
+    padding: 170px 0;
+}
+
+.services__heading,
+.services__desc {
+    text-align: center;
+}
+
+.services__desc {
+    max-width: 468px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 18px;
+}
+
+/* Services image */
+.services__row {
+    margin-top: 70px;
+    display: flex;
+}
+
+.services__img {
+    border-radius: 12px;
+    max-width: 570px;
+    width: 100%;
+    height: 570px;
+    object-fit: cover;
+}
+
+/* Services List */
+.services__list {
+    margin: auto 0 auto 130px;
+}
+
+.services-item {
+    max-width: 470px;
+    width: 100%;
+    height: 128px;
+    padding: 21px 22px 20px;
+    display: flex;
+}
+
+.services-item:hover {
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+
+.services-item:hover .services-item__icon {
+    color: #fff;
+    background: var(--primary-color);
+}
+
+.services__btn {
+    margin-top: 55px;
+}
+
+.services-item__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    color: #10375c;
+    background: #eff6fd;
+    transition: 0.25s;
+}
+
+.services-item__content {
+    margin-left: 19px;
+}
+
+.services-item__title {
+    color: #10375c;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.services-item__desc {
+    margin-top: 8px;
+    font-size: 1.6rem;
+    font-weight: 1.75;
+}
+
+/* =========== Work =========== */
+.work {
+    padding: 100px 0;
+    background: #f6fbff;
+}
+
+.work__desc {
+    margin-top: 18px;
+    max-width: 468px;
+    width: 100%;
+}
+
+/* Work List */
+.work__list {
+    margin-top: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.work-item {
+    max-width: 370px;
+    width: 100%;
+    height: 402px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+    background: #fff;
+    transition: 0.25s;
+}
+
+.work-item:hover {
+    transform: translateY(-16px);
+    border: 16px solid var(--primary-color);
+}
+
+.work-item:hover .work-item__link {
+    color: var(--primary-color);
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.work-item__content {
+    padding: 43px 42px;
+}
+
+.work-item__heading {
+    margin-top: 18px;
+    color: #10375c;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.385;
+}
+
+.work-item__desc {
+    margin-top: 28px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
+
+.work-item__link {
+    display: inline-block;
+    margin-top: 1.6rem;
+    color: #575f66;
+    font-weight: 300;
+    line-height: 1.75;
+    transition: 0.25s;
 }
