--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -796,3 +796,18 @@ a {
     border-radius: 4px;
     background: #2e80ce;
 }
+
+.footer_line {
+    width: 100%;
+    height: 1px;
+    background: #406181;
+}
+
+.footer__bottom-desc {
+    padding: 28px 0 42px;
+    color: #aab3ba;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.4rem;
+    line-height: 1.86;
+}
