Fix bug input email of the footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -809,6 +809,10 @@ a {
     background: transparent;
 }
 
+.footer__input::placeholder {
+    color: #a9b3bb;
+}
+
 .footer__button {
     min-width: 108px;
     height: 46px;
